# australia-analytics

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  australia-population.ipynb  election-notebook.ipynb  jupyter_dash.ipynb  main.py  notebook.ipynb  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
australia_analytics/: README.md  dbt_project.yml  packages.yml
australia_analytics/models/: schema.yml
dash_app/: election_exploration.py  main.py
dash_app/election_map/: CED_2025_AUST_GDA2020.dbf  CED_2025_AUST_GDA2020.shx  CED_2025_AUST_GDA2020.xml
dash_app/pages/: contact.py  election.py  immigration.py  profile.py  services.py
raw_data/: 310101.xlsx  3101016A.xlsx  3101016B.xlsx  310102.xlsx  310104.xlsx  3101051.xlsx  3101052.xlsx  3101053.xlsx  3101054.xlsx  3101055.xlsx  3101056.xlsx  3101057.xlsx  3101058.xlsx  3101059.xlsx  33010DC03.xlsx  643202-median-residential-price.xlsx  Census article - Religious affiliation in Australia.xlsx  Number of marriages registered and crude marriage rate, Australia, 2004-2024 (a)(b)(c).xlsx  Religious affiliation classification.xlsx  aus_pop_births_state.xlsx  birth_registered_since_1924.csv  religious_affiliation.csv
raw_data/election-preferences/: HouseFirstPrefsByStateByPartyDownload-31496.csv  HouseStateFirstPrefsByPollingPlaceDownload-31496-NSW.csv  HouseStateFirstPrefsByPollingPlaceDownload-31496-NT.csv  HouseStateFirstPrefsByPollingPlaceDownload-31496-WA.csv  HouseTppByDivisionByVoteTypeDownload-31496.csv  HouseTppByDivisionDownload-31496.csv  HouseTppByPollingPlaceDownload-31496.csv  (+1 more)
(+313 files in other folders)
