[project]
name = "australia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "dbt-bigquery>=1.11.0",
    "dbt-core>=1.11.2",
    "fastexcel>=0.18.0",
    "fsspec>=2025.12.0",
    "gcsfs>=2025.12.0",
    "polars>=1.37.1",
    "python-dotenv>=1.2.1",
    "streamlit>=1.53.1",
]
